Edited FAQ, started backend of payment, card, settings, merged pages and edited links of images and CSS

--- a/HTML/FAQ.html
+++ b/HTML/FAQ.html
@@ -4,19 +4,93 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="/Electronix-Website/CSS/FAQ.css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>FAQ</title>
-    <link rel="stylesheet" href="/Electronix-Website/CSS/FAQ.css" />
+
+    <style>
+      *{
+        font-size: 20px;
+      }
+      body{
+        background-color: #A1D8F7;
+      }
+    </style>
   </head>
 
   <body>
-    <h1>FAQ</h1>
-    <div>
-      <p>How to buy items from Electronix?</p>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/Electronix-Website/HTML/FAQ.html">Orders</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Electronix-Website/HTML/FAQaccounts.html">Accounts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/Electronix-Website/HTML/FAQpayment.html">Payment</a>
+      </li>
+    </ul>
+   
+    <div class="card">
       <p>
-        First of all sign up on Electronix website by going to Accounts->Sign
-        Up. If you are already a registered user, make sure you are Signed in.
-        After Signing in you can add items in your cart and proceed to buy.
+        From where do I check my order status?
+       <p><a href="">Click on the link</a> given to check your order's status</p> 
       </p>
     </div>
+
+    <div class="card">
+      <p>
+        I was not present at home when the delivery person came for delivery, what shuld I do?
+        <p>You will have to wait for sometime your order's delivery will be rescheduled soon and you will get a call for the same.</p>
+      </p>
+    </div>
+
+    <div class="card">
+      <p>
+        My orders delivery date has passed, still I didn't recieve my order? Why is it so?
+      </p>
+      <p>
+        There might be some technical issues due to which your order is delayed. You can contact the help service people the number is +91 123456789
+      </p>
+    </div>
+
+    <div class="card">
+      <p>
+        While placing the order my website crashes due to network issues? How can I check whether my order was placed or not
+      </p>
+      <p>
+        You can check it in your order status 
+      </p>
+    </div>
+
+    <div class="card">
+      <p>Why is the Cash On Delivery mode disabled</p>
+      <p>The mode of payment depends on the type of product and also due to the pandemic we trying to maintan social distancing</p>
+    </div>
+
+    <div class="card">
+      <p>
+        How do I place and order?
+      </p>
+      <p>Whichever product you wish to buy you can add it to cart and then go to my carts where all your product will be present from there you procedd to buy by clicking continue and complete the payment process</p>
+    </div>
+
+    <div class="card">
+      <p>Can I get my order delivered fast?
+      </p>
+      <p>
+        That is possible only if you are an Electronix plus member
+      </p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+    integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+    crossorigin="anonymous"></script>
   </body>
 </html>
