--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,12 +4,188 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/Electronix-Website/CSS/cart.css">
 	<script src="/Electronix-Website/JS/cart.js" async></script>
     <title>Document</title>
+
+	<style>
+    * {
+    box-sizing: border-box;
+    /* font-family: Raleway; */
+    color: black;
+    font-weight: bold;
+}
+
+.cart-column {
+  font-weight: bolder;
+  font-size: 25px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+body{
+  background-color: #A1D8F7;
+  
+}
+.btn-checkout
+{
+  background-color: darkblue;
+}
+		header {
+  background: rgb(0, 0, 0);
+  display: flex;
+  color: rgb(255, 255, 255);
+  justify-content: space-around;
+  align-items: center;
+}
+
+.main_header a {
+  float: right;
+  display: block;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 14px 12px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.main_header .search-container {
+  float: right;
+}
+
+.main_header input[type=text] {
+  padding: 6px;
+  width: 500px;
+  font-size: 17px;
+  border: none;
+}
+
+.main_header .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-right: 16px;
+  background: #ccc;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.main_header .search-container button:hover {
+  background: rgb(160, 159, 159);
+}
+
+.main_header .logo:hover {
+  cursor: pointer;
+}
+
+.logo {
+  margin-top: 4px;
+}
+
+.signup i {
+  margin-top: 15px;
+}
+
+.signup-box {
+  padding: 0 15px 0 15px;
+}
+
+.signup-box:hover {
+  background-color: rgb(126, 127, 133);
+  cursor: pointer;
+}
+
+.cart i {
+  margin-top: 15px;
+}
+
+.cart-box {
+  padding: 0 15px 0 15px;
+}
+
+.cart-box:hover {
+  background-color: rgb(126, 127, 133);
+  cursor: pointer;
+}
+
+.dropbtn {
+  background: rgb(0, 0, 0);
+  ;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 50px;
+  text-decoration: none;
+}
+.dropdown-content a:hover {
+  color: rgb(126, 127, 133);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: rgb(126, 127, 133);
+}
+
+	</style>
 </head>
 <body>
-	<section class="container content-section">
+	<header class="main_header">
+        <div class="logo">
+            <a href=""><b>ELECTRONIX</b></a>
+            <img src="/Electronix-Website/Images/logo.jpg" alt="" height="45px" width="50px">
+        </div>
+    
+        <div class="dropdown">
+            <button class="dropbtn">
+                <i class="fa fa-caret-down" aria-hidden="true"></i> MORE
+            </button>
+            <div class="dropdown-content">
+                <a href="#">My Order</a>
+                <a href="/Electronix-Website/PHP/settings.php">My Account</a>
+                <a href="#">Contact Us</a>
+                <a href="#">About Us</a>
+                <a href="#">Services</a>
+            </div>
+        </div>
+        <div class="signup-box">
+            <div class="signup">
+                <a href="/Electronix-Website/PHP/sign up.php">SIGNUP</a>
+                <i class="fa fa-user"></i>
+            </div>
+        </div>
+        <div class="cart-box">
+            <div class="cart">
+                <a href="/Electronix-Website/HTML/cart.html">CART</a>
+                <i class="fa fa-shopping-cart"></i>
+            </div>
+        </div>
+    </header>
+	<!-- <section class="container content-section">
 		<div class="navbar">
 			<a href="mobile.html">Mobile</a>
 			<a href="laptop.html">Laptop</a>
@@ -21,13 +197,13 @@
 				<button type="submit"><i class="fa fa-search"></i></button>
 			  </form>
 			</div>
-		</div>
+		</div> -->
 		<h1 class="section-header">My Cart</h1>
 		<div class="cart-row">
-			<span class="cart-product cart-header cart-column">PRODUCT</span>
-			<span class="cart-item-prize cart-header cart-column">ITEM PRIZE</span>
-			<span class="cart-quantity cart-header cart-column">QUANTITY</span>
-			<span class="cart-prize cart-header cart-column">PRIZE</span>=
+			<h1 class="cart-product cart-header cart-column">PRODUCT</h1>
+			<h1 class="cart-item-prize cart-header cart-column">ITEM PRIZE</h1>
+			<h1 class="cart-quantity cart-header cart-column">QUANTITY</h1>
+			<h1 class="cart-prize cart-header cart-column">PRIZE</h1>
 		</div>
 		<div class="cart-products">
 			<div class="cart-row">
@@ -82,7 +258,9 @@
 			<strong class="cart-total-title">Total</strong>
 			<span class="cart-total-prize">$1899.96</span>
 		</div>
-		<button class="btn btn-primary btn-checkout" type="button">Proceed to checkout</button>
+		<a href="/Electronix-Website/PHP/payment.php">
+      <button class="btn btn-primary btn-checkout" type="button">Proceed to checkout</button>
+    </a>
 	</section>
 </body>
 </html>
