--- a/HTML/help centre.html
+++ b/HTML/help centre.html
@@ -12,7 +12,7 @@
 
   <hr>
   <div class="mycard">
-    <a href="">
+    <a href="/Electronix-Website/HTML/cart.html">
       <img src="/Website/Images/orders.png" width="100" height="90" />
       <h4>Your orders</h4>
     </a>
@@ -40,14 +40,14 @@
   </div>
 
   <div class="mycard">
-    <a href="">
+    <a href="/Electronix-Website/HTML/cart.html">
       <img src="/Website/Images/shipping.png" width="100" height="90" />
-      <h4>Shipping</h4>
+      <h4>Cart</h4>
     </a>
   </div>
 
   <div class="mycard">
-    <a href="/Website/HTML/FAQ.html">
+    <a href="/Electronix-Website/HTML/FAQ.html">
       <img src="/Website/Images/faq.png" width="100" height="90" />
       <h4>FAQ</h4>
     </a>
