--- a/HTML/laptop.html
+++ b/HTML/laptop.html
@@ -6,22 +6,191 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/CSS/product_style.css">
+  <link rel="stylesheet" href="/Electronix-Website/CSS/product_style.css">
+
+  <style>
+    body{
+      background-color: #A1D8F7;
+    }
+    .container_brand
+    {
+      background-color: white;
+    }
+    .card
+    {
+      background-color: white;
+    }
+    header {
+  background: rgb(10, 10, 10);
+  display: flex;
+  color: rgb(255, 255, 255);
+  justify-content: space-around;
+  align-items: center;
+}
+.navbar {
+    overflow: hidden;
+    background-color: rgb(10, 4, 100);
+    
+  }
+  .navbar a.active {
+    background-color: rgb(8, 8, 8);
+    color: rgb(253, 251, 251);
+    border: 2px solid white;
+  }
+.main_header a {
+  float: right;
+  display: block;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 14px 12px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.main_header .search-container {
+  float: right;
+}
+
+.main_header input[type=text] {
+  padding: 6px;
+  width: 500px;
+  font-size: 17px;
+  border: none;
+}
+
+.main_header .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-right: 16px;
+  background: #ccc;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.main_header .search-container button:hover {
+  background: rgb(160, 159, 159);
+}
+
+.main_header .logo:hover {
+  cursor: pointer;
+}
+
+.logo {
+  margin-top: 4px;
+}
+
+.signup i {
+  margin-top: 15px;
+}
+
+.signup-box {
+  padding: 0 15px 0 15px;
+}
+
+.signup-box:hover {
+  background-color: rgb(126, 127, 133);
+  cursor: pointer;
+}
+
+.cart i {
+  margin-top: 15px;
+}
+
+.cart-box {
+  padding: 0 15px 0 15px;
+}
+
+.cart-box:hover {
+  background-color: rgb(126, 127, 133);
+  cursor: pointer;
+}
+
+.dropbtn {
+  background: rgb(0, 0, 0);
+  ;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 50px;
+  text-decoration: none;
+}
+.dropdown-content a:hover {
+  color: rgb(126, 127, 133);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: rgb(126, 127, 133);
+}
+
+  </style>
 </head>
 
 <body>
+
+  <header class="main_header">
+    <div class="logo">
+        <a href=""><b>ELECTRONIX</b></a>
+        <img src="/Electronix-Website/Images/logo.jpg" alt="" height="45px" width="50px">
+    </div>
+    <div class="search-container">
+        <form action="/action_page.php">
+            <input type="text" placeholder="Search for products, brands and much more..." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
+    <div class="dropdown">
+        <button class="dropbtn">
+            <i class="fa fa-caret-down" aria-hidden="true"></i> MORE
+        </button>
+        <div class="dropdown-content">
+            <a href="#">My Order</a>
+            <a href="/Electronix-Website/PHP/settings.php">My Account</a>
+            <a href="#">Contact Us</a>
+            <a href="#">About Us</a>
+            <a href="#">Services</a>
+        </div>
+    </div>
+    <div class="signup-box">
+        <div class="signup">
+            <a href="/Electronix-Website/PHP/sign up.php">SIGNUP</a>
+            <i class="fa fa-user"></i>
+        </div>
+    </div>
+    <div class="cart-box">
+        <div class="cart">
+            <a href="/Electronix-Website/HTML/cart.html">CART</a>
+            <i class="fas fa-shopping-cart"></i>
+        </div>
+    </div>
+</header>
 
   <div class="navbar">
     <a href="mobile.html">Mobile</a>
     <a class="active" href="">Laptop</a>
     <a href="tablet.html">Tablet</a>
     <a href="tv.html">TV</a>
-    <div class="search-container">
-      <form action="/action_page.php">
-        <input type="text" placeholder="Search" name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
-      </form>
-    </div>
   </div>
 
   <div class="heading">
@@ -33,22 +202,22 @@
   <div class="container_brand">
     <div class="box">
       <a href="#hp_heading">
-        <img src="/images/brand-logo/hp.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/hp.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#acer_heading">
-        <img src="/images/brand-logo/acer.png" alt="" width="150" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/acer.png" alt="" width="150" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#apple_heading">
-        <img src="/images/brand-logo/apple.png" alt="" width="160" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/apple.png" alt="" width="160" height="120">
       </a>
     </div>
     <div class="box">
       <a href="#dell_heading">
-        <img src="/images/brand-logo/dell.png" alt="" width="160" height="120">
+        <img src="/Electronix-Website/Images/brand-logo/dell.png" alt="" width="160" height="120">
       </a>
     </div>
   </div>
@@ -58,7 +227,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="/images/laptop/HP-Pavilion.jpeg" alt="HP-Pavilion" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-Pavilion.jpeg" alt="HP-Pavilion" width="100%" height="255px">
       <h1>HP Pavilion</h1>
       <h3>Core i5 11th Gen<br>(16 GB/512 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹66,990</b></p>
@@ -66,7 +235,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/HP-15s.jpeg" alt="HP-15s" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-15s.jpeg" alt="HP-15s" width="100%" height="255px">
       <h1>HP 15s</h1>
       <h3>Core i3 11th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/Jet Black)</h3>
       <p class="price"><b>₹46,990</b></p>
@@ -74,7 +243,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/HP-14s.jpeg" alt="HP-14s" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/HP-14s.jpeg" alt="HP-14s" width="100%" height="255px">
       <h1>HP 14s</h1>
       <h3>Core i3 11th Gen<br>(8 GB/256 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹40,000</b></p>
@@ -88,7 +257,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="/images/laptop/acer-NITRO.jpeg" alt="acer-NITRO" width="100%" height="264px">
+      <img src="/Electronix-Website/Images/laptop/acer-NITRO.jpeg" alt="acer-NITRO" width="100%" height="264px">
       <h2>acer NITRO 5 Ryzen</h2>
       <h3>9 Octa Core<br>(16 GB/1 TB HDD/256 GB SSD/Windows 10 Home/Black)</h3>
       <p class="price"><b> ₹1,29,990</b></p>
@@ -96,7 +265,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/acer-ConceptD.jpeg" alt="acer-ConceptD" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/acer-ConceptD.jpeg" alt="acer-ConceptD" width="100%" height="255px">
       <h1>acer ConceptD</h1>
       <h3>5 Core i5 8th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/4 GB Graphics/White)</h3>
       <p class="price"><b>₹99,500</b></p>
@@ -104,7 +273,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/acer-Aspire-7.jpeg" alt="acer-Aspire" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/acer-Aspire-7.jpeg" alt="acer-Aspire" width="100%" height="255px">
       <h1>acer Aspire</h1>
       <h3>7 Core i5 10th Gen<br>(8 GB/512 GB SSD/Windows 10 Home/4 GB Graphics/Black)</h3>
       <p class="price"><b>₹56,990</b></p>
@@ -118,7 +287,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="/images/laptop/APPLE-MacBook-Pro.jpeg" alt="APPLE-MacBook-Pro" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Pro.jpeg" alt="APPLE-MacBook-Pro" width="100%" height="255px">
       <h1>APPLE MacBook Pro</h1>
       <h3>Core i7 9th Gen<br>(16 GB/512 GB SSD/Mac OS Catalina/4 GB Graphics/Silver)</h3>
       <p class="price"><b>₹1,79,990</b></p>
@@ -126,7 +295,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/APPLE-MacBook-Pro-M1.jpeg" alt="APPLE-MacBook-Pro-M1" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Pro-M1.jpeg" alt="APPLE-MacBook-Pro-M1" width="100%" height="255px">
       <h1>APPLE MacBook Pro M1</h1>
       <h3>Core i3 11th Gen<br>(8 GB/256 GB SSD/Windows 10 Home/Natural Silver)</h3>
       <p class="price"><b>₹1,12,990</b></p>
@@ -134,7 +303,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/APPLE-MacBook-Air-M1.jpeg" alt="APPLE-MacBook-Air-M1" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/APPLE-MacBook-Air-M1.jpeg" alt="APPLE-MacBook-Air-M1" width="100%" height="255px">
       <h1>APPLE MacBook Air M1</h1>
       <h3> 8‑core CPU and 7‑core GPU<br>(8 GB/256 GB SSD/Mac OS Big Sur/Space Grey)</h3>
       <p class="price"><b>₹88,990</b></p>
@@ -148,7 +317,7 @@
   </div>
   <div class="container_products">
     <div class="card">
-      <img src="/images/laptop/DELL-G15.jpeg" alt="DELL-G15" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/DELL-G15.jpeg" alt="DELL-G15" width="100%" height="255px">
       <h1>DELL G15</h1>
       <h3>Core i5 10th Gen<br>(8 GB/512 GB SSD/Windows 10/4 GB Graphics/Dark Shadow Grey)</h3>
       <p class="price"><b>₹69,690</b></p>
@@ -156,7 +325,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/DELL-Inspiron.jpeg" alt="DELL-Inspiron" width="100%" height="255px">
+      <img src="/Electronix-Website/Images/laptop/DELL-Inspiron.jpeg" alt="DELL-Inspiron" width="100%" height="255px">
       <h1>DELL Inspiron</h1>
       <h3>Core i5 11th Gen<br>(4 GB/1 TB HDD/256 GB SSD/Windows 10 Home/Softmint)</h3>
       <p class="price"><b>₹54,990</b></p>
@@ -164,7 +333,7 @@
       <p><button>Add to Cart</button></p>
     </div>
     <div class="card">
-      <img src="/images/laptop/DELL-Inspiron-Ryzen.jpeg" alt="DELL-Inspiron-Ryzen" width="100%" height="265px">
+      <img src="/Electronix-Website/Images/laptop/DELL-Inspiron-Ryzen.jpeg" alt="DELL-Inspiron-Ryzen" width="100%" height="265px">
       <h2>DELL Inspiron Ryzen</h2>
       <h3>3 Dual Core<br>(8 GB/1 TB HDD/Windows 10/Softmint)</h3>
       <p class="price"><b>₹39,990</b></p>
